gap fixed

--- a/src/components/main/allProjects/AllProjects.scss
+++ b/src/components/main/allProjects/AllProjects.scss
@@ -25,7 +25,7 @@
     align-items: center;
     position: sticky;
     top: 0;
-    right: 20px;
+    margin-right: 50px;
     margin-left: auto;
     z-index: 2;
   }
