--- a/src/components/main/map/mapHeader/MapHeader.scss
+++ b/src/components/main/map/mapHeader/MapHeader.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   padding: 20px;
+  padding-right: 0;
   margin-top: 32px;
 
   .header-title {
