--- a/src/components/main/map/mapHeader/select/Select.scss
+++ b/src/components/main/map/mapHeader/select/Select.scss
@@ -1,5 +1,5 @@
 .select {
-  margin-left: 20px;
+  margin-right: 0;
   position: relative;
   width: 150px;
 }
